@@ -3,18 +3,17 @@ package org.educa.homelyBackend.services.business.impl;
 import lombok.RequiredArgsConstructor;
 import org.educa.homelyBackend.daos.PropertyAddressDao;
 import org.educa.homelyBackend.models.PropertyAddressModel;
-import org.educa.homelyBackend.models.UserModel;
 import org.educa.homelyBackend.services.business.PropertyAddressService;
 import org.educa.homelyBackend.utils.ExceptionUtil;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
+import java.util.AbstractMap;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 
 @Service
 @RequiredArgsConstructor
@@ -25,47 +24,34 @@ public class PropertyAddressServiceImpl implements PropertyAddressService {
     private final PropertyAddressDao propertyAddressDao;
 
     @Override
-    public List<PropertyAddressModel> findAddressesWithinRadius(double latitude, double longitude, Integer radiusKm) {
-        if (radiusKm == null || radiusKm <= 0) {
-            return List.of();
-        }
+    public List<PropertyAddressModel> findByLatitudeAndLongitudeWithinRadius(
+            BigDecimal latitude, BigDecimal longitude, Integer radiusKm
+    ) {
+        double latCenter = latitude.doubleValue();
+        double lonCenter = longitude.doubleValue();
+        double searchRadiusKm = radiusKm.doubleValue();
 
-        double radius = radiusKm.doubleValue();
-        BoundingBox boundingBox = buildBoundingBox(latitude, longitude, radius);
+        Map<String, Double> boundingBox = calculateBoundingBox(latCenter, lonCenter, searchRadiusKm);
 
         return propertyAddressDao.findAllByLatitudeBetweenAndLongitudeBetween(
-                        BigDecimal.valueOf(boundingBox.minLatitude()),
-                        BigDecimal.valueOf(boundingBox.maxLatitude()),
-                        BigDecimal.valueOf(boundingBox.minLongitude()),
-                        BigDecimal.valueOf(boundingBox.maxLongitude())
+                        BigDecimal.valueOf(boundingBox.get("minLat")),
+                        BigDecimal.valueOf(boundingBox.get("maxLat")),
+                        BigDecimal.valueOf(boundingBox.get("minLon")),
+                        BigDecimal.valueOf(boundingBox.get("maxLon"))
                 ).stream()
-                .filter(address -> isWithinRadius(latitude, longitude, address, radius))
-                .sorted(Comparator.comparingDouble(address -> distanceKm(
-                        latitude,
-                        longitude,
-                        address.getLatitude().doubleValue(),
-                        address.getLongitude().doubleValue()
-                )))
+                .filter(address -> Objects.nonNull(address.getLatitude()) && Objects.nonNull(address.getLongitude()))
+                .map(address -> new AbstractMap.SimpleEntry<>(
+                        address,
+                        calculateHaversineDistance(
+                                latCenter, lonCenter,
+                                address.getLatitude().doubleValue(),
+                                address.getLongitude().doubleValue()
+                        )
+                ))
+                .filter(entry -> entry.getValue() <= searchRadiusKm)
+                .sorted(Comparator.comparingDouble(AbstractMap.Entry::getValue))
+                .map(AbstractMap.Entry::getKey)
                 .toList();
-    }
-
-    @Override
-    public Page<PropertyAddressModel> findAll(Integer pageNumber, Integer pageSize) {
-        if (pageNumber == null || pageNumber - 1 < 0) {
-            pageNumber = 0;
-        }
-
-        if (pageSize == null || pageSize <= 0) {
-            pageSize = 30;
-        }
-
-        Page<PropertyAddressModel> pagedPropertyAddresses = propertyAddressDao.findAll(PageRequest.of(pageNumber - 1, pageSize));
-
-        if (pagedPropertyAddresses.isEmpty()) {
-            throw ExceptionUtil.manageException(HttpStatus.NOT_FOUND, "No existe ningún usuario").get();
-        }
-
-        return pagedPropertyAddresses;
     }
 
     @Override
@@ -73,57 +59,102 @@ public class PropertyAddressServiceImpl implements PropertyAddressService {
         return propertyAddressDao.save(propertyAddressModel);
     }
 
-    private boolean isWithinRadius(double centerLatitude, double centerLongitude, PropertyAddressModel address, double radiusKm) {
-        if (address.getLatitude() == null || address.getLongitude() == null) {
-            return false;
+    @Override
+    public PropertyAddressModel update(Integer propertyId, PropertyAddressModel propertyAddressModel) {
+        boolean makeChanges = false;
+        PropertyAddressModel existingPropertyAddress = propertyAddressDao.findById(propertyId)
+                .orElseThrow(() -> ExceptionUtil.manageException(
+                        HttpStatus.NOT_FOUND,
+                        "Property with ID " + propertyId + " not found"
+                ).get());
+
+        if (propertyAddressModel.getStreet() != null) {
+            existingPropertyAddress.setStreet(propertyAddressModel.getStreet());
+            makeChanges = true;
         }
 
-        return distanceKm(
-                centerLatitude,
-                centerLongitude,
-                address.getLatitude().doubleValue(),
-                address.getLongitude().doubleValue()
-        ) <= radiusKm;
+        if (propertyAddressModel.getNumber() != null) {
+            existingPropertyAddress.setNumber(propertyAddressModel.getNumber());
+            makeChanges = true;
+        }
+
+        if (propertyAddressModel.getFloor() != null) {
+            existingPropertyAddress.setFloor(propertyAddressModel.getFloor());
+            makeChanges = true;
+        }
+
+        if (propertyAddressModel.getDoor() != null) {
+            existingPropertyAddress.setDoor(propertyAddressModel.getDoor());
+            makeChanges = true;
+        }
+
+        if (propertyAddressModel.getPostalCode() != null) {
+            existingPropertyAddress.setPostalCode(propertyAddressModel.getPostalCode());
+            makeChanges = true;
+        }
+
+        if (propertyAddressModel.getCity() != null) {
+            existingPropertyAddress.setCity(propertyAddressModel.getCity());
+            makeChanges = true;
+        }
+
+        if (propertyAddressModel.getProvince() != null) {
+            existingPropertyAddress.setProvince(propertyAddressModel.getProvince());
+            makeChanges = true;
+        }
+
+        if (propertyAddressModel.getCountry() != null) {
+            existingPropertyAddress.setCountry(propertyAddressModel.getCountry());
+            makeChanges = true;
+        }
+
+        if (propertyAddressModel.getLatitude() != null) {
+            existingPropertyAddress.setLatitude(propertyAddressModel.getLatitude());
+            makeChanges = true;
+        }
+
+        if (propertyAddressModel.getLongitude() != null) {
+            existingPropertyAddress.setLongitude(propertyAddressModel.getLongitude());
+            makeChanges = true;
+        }
+
+        if (makeChanges) {
+            return save(existingPropertyAddress);
+        }
+
+        return existingPropertyAddress;
     }
 
-    private double distanceKm(double latitude1, double longitude1, double latitude2, double longitude2) {
-        double lat1Rad = Math.toRadians(latitude1);
-        double lat2Rad = Math.toRadians(latitude2);
-        double deltaLat = Math.toRadians(latitude2 - latitude1);
-        double deltaLon = Math.toRadians(longitude2 - longitude1);
+    private double calculateHaversineDistance(double latitude1, double longitude1, double latitude2, double longitude2) {
+        double latitudeRadiansDelta = Math.toRadians(latitude2 - latitude1);
+        double longitudeRadiansDelta = Math.toRadians(longitude2 - longitude1);
 
-        double a = Math.sin(deltaLat / 2) * Math.sin(deltaLat / 2)
-                + Math.cos(lat1Rad) * Math.cos(lat2Rad)
-                * Math.sin(deltaLon / 2) * Math.sin(deltaLon / 2);
-        double c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
-        return EARTH_RADIUS_KM * c;
+        double haversineA = Math.sin(latitudeRadiansDelta / 2) * Math.sin(latitudeRadiansDelta / 2)
+                + Math.cos(Math.toRadians(latitude1))
+                * Math.cos(Math.toRadians(latitude2))
+                * Math.sin(longitudeRadiansDelta / 2)
+                * Math.sin(longitudeRadiansDelta / 2);
+
+        double centralAngle = 2 * Math.atan2(Math.sqrt(haversineA), Math.sqrt(1 - haversineA));
+
+        return EARTH_RADIUS_KM * centralAngle;
     }
 
-    private BoundingBox buildBoundingBox(double latitude, double longitude, double radiusKm) {
+    private Map<String, Double> calculateBoundingBox(double latitude, double longitude, double radiusKm) {
         double latitudeDelta = Math.toDegrees(radiusKm / EARTH_RADIUS_KM);
-        double minLatitude = clamp(latitude - latitudeDelta, -90.0, 90.0);
-        double maxLatitude = clamp(latitude + latitudeDelta, -90.0, 90.0);
 
-        double longitudeDelta;
-        if (Math.abs(latitude) >= 90.0) {
+        double cosineLatitude = Math.cos(Math.toRadians(latitude));
+        double longitudeDelta = (cosineLatitude < 1e-6) ? 180.0 : Math.toDegrees(radiusKm / (EARTH_RADIUS_KM * cosineLatitude));
+
+        if (Double.isNaN(longitudeDelta) || Double.isInfinite(longitudeDelta)) {
             longitudeDelta = 180.0;
-        } else {
-            longitudeDelta = Math.toDegrees(radiusKm / (EARTH_RADIUS_KM * Math.cos(Math.toRadians(latitude))));
-            if (Double.isNaN(longitudeDelta) || Double.isInfinite(longitudeDelta)) {
-                longitudeDelta = 180.0;
-            }
         }
 
-        double minLongitude = clamp(longitude - longitudeDelta, -180.0, 180.0);
-        double maxLongitude = clamp(longitude + longitudeDelta, -180.0, 180.0);
-
-        return new BoundingBox(minLatitude, maxLatitude, minLongitude, maxLongitude);
-    }
-
-    private double clamp(double value, double min, double max) {
-        return Math.max(min, Math.min(max, value));
-    }
-
-    private record BoundingBox(double minLatitude, double maxLatitude, double minLongitude, double maxLongitude) {
+        return Map.of(
+                "minLat", Math.clamp(latitude - latitudeDelta, -90.0, 90.0),
+                "maxLat", Math.clamp(latitude + latitudeDelta, -90.0, 90.0),
+                "minLon", Math.clamp(longitude - longitudeDelta, -180.0, 180.0),
+                "maxLon", Math.clamp(longitude + longitudeDelta, -180.0, 180.0)
+        );
     }
 }
